--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>BitCredit</title>
+  <title>Bitcredit</title>
 </head>
 
 <body>
